# potato-ddsl

./: .gitignore  CMakeLists.txt  confusion.hpp  dataloader.cpp  dataloader.h  dataset.h  digits_center.prototxt  digits_center_margin.prototxt  digits_center_margin_II_solver.prototxt  digits_center_margin_solver.prototxt  digits_center_solver.prototxt  digits_small.prototxt  digits_small_solver.prototxt  evaluation.hpp  loadeddata.cpp  loadeddata.h  main.cpp  potatologger.h  potatoutils.h  program.cpp  program.h
include/: confusion.hpp  dataloader.h  dataset.h  evaluation.hpp  minicsv.h  potatologger.h  potatoutils.h
src/: dataloader.cpp  main.cpp  program.cpp
